--- a/Cuong/app/src/main/res/values/strings.xml
+++ b/Cuong/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Custom ListView</string>
+    <string name="app_name">BXH BÀI HÁT ÂU MỸ</string>
 </resources>
